[package]
name = "mssql-browser"
description = "Rust implementation of the SQL Server Resolution Protocol"
version = "0.1.1"
authors = ["Wazner"]
edition = "2018"
repository = "https://github.com/Wazner/mssql-browser"
homepage = "https://github.com/Wazner/mssql-browser"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["database", "mssql", "sql-server", "sql"]
categories = ["database"]

[dependencies]
tokio = { version = "0.2", features = ["io-util", "udp"], optional = true }
async-std = { version = "1.5", optional = true }
futures = "0.3"
async-trait = "0.1.29"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }
proc-macro2 = "1.0.10"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "tokio"
required-features = ["tokio"]

[[example]]
name = "async-std"
required-features = ["async-std"]
